pages/programs/programs.module.scss
@import "@/assets/styles/mixins.scss";

.programContainer {
  $primary: #1a3989;

  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: auto;

  &:global(::before) {
    content: " ";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background: url(/assets/images/clientbg.png);
    background-size: 100% auto;
    // filter: blur(24px);
    background-repeat: repeat-y;
  }

  min-height: calc(100vh - 88px);

  :global {
    .dashboard {
      display: flex;
      width: 100%;
      margin: auto;
      height: 100%;
      padding: 1.5rem 0;
      flex-direction: column;

      .categories {
        margin-top: 1.5rem;
      }

      .title {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        margin: 1rem 1rem;

        &-text {
          color: $primary;
          font-weight: 500;
          font-size: 1.5rem;
          line-height: 1.8rem;
          letter-spacing: 2%;
        }

        &-subtext {
          color: $primary;
          font-weight: 300;
          font-size: 1.125rem;
          line-height: 1.2rem;
          letter-spacing: 2%;
          margin-top: 0.5rem;
        }
      }

      .dashboard-component {
        position: relative;
        padding: 1rem;
        margin-top: 1rem;
        backdrop-filter: blur(20px);
        animation: blur-in 1s ease forwards;

        &::before {
          content: " ";
          display: block;
          position: absolute;
          width: 100%;
          height: calc(100% + 2rem);
          background-image: url(/assets/images/dashboard-background.png);
          left: 0;
          top: 0;
          // filter: blur(10px);
          opacity: 0.15;
          z-index: -1;
        }
        .tl-dashboards {

          &.public-dashboard-page {

            background: none;
            margin-top: 1.5rem;
            min-height: 30rem;
            .tl-dashboard-container {
              margin: 0;
              #dashboard-container {
                .dashboard-wrapper {
                  width: calc(100vw - 4rem);
                  margin: 0;
                }
              }
            }

            .widget-wrapper {
              & > .tile {
                border-radius: 8px;
                background: rgba(238, 242, 252, 0.32);
                backdrop-filter: blur(32px);

                .widget-header {
                  * {
                    color: #1a3989;
                  }
                  .th-title {
                    span {
                      font-weight: 600;
                    }
                  }
                }
                .markdown {
                  h3 {
                    color: #1a3989;
                    font-family: "Helvetica Neue", "Helvetica 45 Light", sans-serif;
                    height: 100%;
                    display: inline-flex;
                    align-items: center;
                  }
                }
                .widget-header {
                  display: inline-flex;
                  * {
                    font-family: "Helvetica Neue", "Helvetica 45 Light", sans-serif;
                    text-align: left;
                    color: #1A3989;
                    font-size: 1rem;
                    letter-spacing: 0.05rem;
                  }
                }
                .visualization-renderer-wrapper {
                  backdrop-filter: blur(32px);
                  background: rgba(238, 242, 252, 0.32);
                  position: relative;
                  margin: 1rem;

                  overflow: hidden;
                  border-radius: 0.5rem;
                  @include gradient-border(0.5rem);

                  .main-svg {
                    background: none !important;
                    transform: scale(0.9);
                  }
                  .modebar-group {
                    background-color: transparent !important;
                  }
                }
                .widget-text h3 {
                  display: flex;
                  height: 100%;
                  align-items: center;
                  font-family: "Helvetica Neue", "Helvetica 45 Light", sans-serif;
                }
              }
            }

            .spinner {
              .zmdi.zmdi-refresh {
                font-size: 1.6rem;
              }
            }

            > #footer {
              display: none;
            }
          }
        }
      }

      @media screen and (max-width: 480px) {
        width: calc(100% - 2rem);
      }
    }
  }

  :global {
    @keyframes blur-in {
      0% {
        opacity: 0;
        margin-top: -2rem;
      }
      90% {
        opacity: 0.9;
        margin-top: 2rem;
      }
      100% {
        opacity: 1;
      }
    }
  }
}

.talkToUs {
  display: flex;
  justify-content: center;

  &:global {
    > a {
      display: inline-flex;
      align-items: center;
      padding: 1rem 2rem;
      border-radius: 2.625rem;
      background: linear-gradient(144deg, #4383FF 0%, #6A5CFF 100%);
      box-shadow: 0px 1px 2px 0px rgba(26, 57, 137, 0.38);
      color: #EEF2FC;
      font-size: 1.3125rem;
      letter-spacing: 0.0525rem;
      text-decoration: none;

      & > img {
        margin-right: 1rem;
      }

    }
  }
}

.dashboardLoader {
  min-height: 30rem;
}

